chore(conductor): Mark track 'Fix Authentication error during outbound Notion sync' as complete